--- a/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-apps-control-room-md-4f2.json
+++ b/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-apps-control-room-md-4f2.json
@@ -23,7 +23,7 @@
     "permalink": "/docs/apps/overview"
   },
   "next": {
-    "title": "General FAQ",
-    "permalink": "/docs/faq/general-faq"
+    "title": "Inverter Security Guideline",
+    "permalink": "/docs/Security/security-guideline"
   }
 }
