--- a/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-apps-overview-md-b39.json
+++ b/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-apps-overview-md-b39.json
@@ -5,10 +5,9 @@
   "source": "@site/docs/apps/overview.md",
   "sourceDirName": "apps",
   "slug": "/apps/overview",
-  "permalink": "/docs/apps/overview",
+  "permalink": "/apps/overview",
   "draft": false,
   "unlisted": false,
-  "editUrl": "https://www.inverter.network/docs/apps/overview.md",
   "tags": [],
   "version": "current",
   "sidebarPosition": 1,
@@ -20,10 +19,10 @@
   "sidebar": "docs",
   "previous": {
     "title": "Technical Reference",
-    "permalink": "/docs/contracts/contracts/technical-reference"
+    "permalink": "/contracts/contracts/technical-reference"
   },
   "next": {
     "title": "Control Room",
-    "permalink": "/docs/apps/control-room"
+    "permalink": "/apps/control-room"
   }
 }
